CompressedFiles simplified by taking out dependency on commons-compress
This means that bz2-files cannot be read or written anymore by the
compression package at the moment. Most if not all use cases in ots
concerned gz and zip files.